@@ -59,6 +59,15 @@
                     <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
+                 
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version> <!-- or your current version -->
+            <configuration>
+                <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+            </configuration>
+        </plugin>
 
             <!-- Surefire Plugin -->
             <plugin>
